--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <p>Click the button below for a little surprise!</p>
         <button id="revealBtn">Click Me</button>
         <div class="hidden-message" id="message">
-            <p>You make my heart flutter like this! 💖</p>
-            <div class="heart"></div>
+            <p>I love you so much! 💖</p>
         </div>
     </div>
     
