--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love Note</title>
+    <title>For Thumaaaas Uliber</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/canvas-confetti/1.4.0/confetti.browser.min.js"></script>
 </head>
@@ -13,7 +13,7 @@
         <p>Click the button below for a little surprise!</p>
         <button id="revealBtn">Click Me</button>
         <div class="hidden-message" id="message">
-            <p>I love you so much! 💖</p>
+            <p>I love you so much and your dick! 💖</p>
         </div>
     </div>
     
